fix badge icon on safari

--- a/steedos/client/views/springboard.less
+++ b/steedos/client/views/springboard.less
@@ -9,16 +9,17 @@
     .weui_grid_icon {
         width: 27px;
         height: 40px;
+        position: relative;
         i.ion, i.fa {
             font-size: 36px;
             color: #008d4c;
         }
         .label {
             position: absolute;
-            top: 15px;
+            top: -3px;
             text-align: center;
-            font-size: 9px;
-            margin-left: 20px;
+            font-size: 12px;
+            left: 20px;
         }
     }
 }
